--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+# Ignore Gradle project-specific cache directory
+.gradle
 
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Ignore Gradle build output directory
+build
 
 .idea
-
