--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-# Ignore Gradle project-specific cache directory
-.gradle
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-# Ignore Gradle build output directory
-build
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
 .idea
+
